# InceptionEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  premake5.lua
Inception/: Inception.sln  Inception.vcxproj  Inception.vcxproj.filters
Inception/src/: Inception.h  icppch.cpp  icppch.h
Inception/src/Inception/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Inception/src/Inception/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Inception/src/Inception/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Inception/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Inception/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Prototype/: Prototype.vcxproj  Prototype.vcxproj.filters
Prototype/src/: PrototypeApp.cpp
configs/: Inception.ini
enc_temp_folder/63f331e9b5687318b8582fabedbc19c/: icpResourceSystem.h
flatbufferSchemas/: Scene.fbs  component.fbs
shaders/: CMakeLists.txt  CSM.vert  CSM.vert.spv  DeferredComposite.frag  DeferredComposite.frag.spv  DeferredComposite.vert  DeferredComposite.vert.spv  FragPBR.spv  GBuffer.frag  GBuffer.frag.spv  GBuffer.vert.spv  MeshLitPass.frag  MeshLitPass.frag.spv  MeshLitPass.vert  PerFrameGlobalUBO.h  PointLightShadow.geom  PointLightShadow.vert  SpotLightShadow.geom  SpotLightShadow.vert  Unlit.frag  Unlit.frag.spv  VertPBR.spv  firstTriangle.vert  fragment.spv  fragmenttest.spv  simplePass.frag  simplePass.vert  vert.spv  verttest.spv
shaders/glsl/: DeferredComposite.vert  Lighting.h  MaskMesh.frag  MaskMesh.vert  MeshLitPass.frag  Tranlucent.frag  Tranlucent.vert
shaders/spv/: CSM.vert.spv  DeferredComposite.frag.spv  DeferredComposite.vert.spv  GBuffer.frag.spv  MeshLitPass.frag.spv  MeshLitPass.vert.spv  Unlit.frag.spv  Unlit.vert.spv
src/: CMakeLists.txt  InceptionEngine.cpp  InceptionEngine.h  main.cpp
src/core/: CMakeLists.txt  InceptionEngine.cpp  InceptionEngine.h  icpByteBuffer.h  icpConfigSystem.cpp  icpConfigSystem.h  icpGuid.cpp  icpGuid.h  icpLogSystem.cpp  icpLogSystem.h  icpMacros.h  icpPipelineBase.cpp  icpPipelineBase.h  icpRHI.h  icpRenderPipeline.cpp  icpRenderPipeline.h  icpRenderSystem.cpp  icpRenderSystem.h  icpSingleton.h  icpSystemContainer.cpp  icpSystemContainer.h  icpVulkanRHI.cpp  icpVulkanRHI.h  icpWindowSystem.cpp  icpWindowSystem.h  main.cpp
src/fb_gen/: Scene_generated.h  component_generated.h
src/input/: icpInputSystem.cpp  icpInputSystem.h
src/mesh/: icpMeshData.cpp  icpMeshData.h  icpMeshRendererComponent.cpp  icpMeshRendererComponent.h  icpMeshResource.cpp  icpMeshResource.h  icpPrimitiveRendererComponent.cpp  icpPrimitiveRendererComponent.h  icpPrimitiveRendererComponment.cpp  icpPrimitiveRendererComponment.h
src/render/: icpCameraSystem.cpp  icpCameraSystem.h  icpDeferredRenderer.cpp  icpDeferredRenderer.h  icpForwardSceneRenderer.cpp  icpForwardSceneRenderer.h  icpImageResource.cpp  icpImageResource.h  icpPipelineBase.cpp  icpPipelineBase.h  icpRHI.cpp  icpRHI.h  icpRenderPassManager.cpp  icpRenderPassManager.h  icpRenderPipeline.cpp  icpRenderPipeline.h  icpRenderSystem.cpp  icpRenderSystem.h  icpSceneRenderer.cpp  icpSceneRenderer.h  icpVulkanRHI.cpp  icpVulkanRHI.h  icpVulkanUtility.cpp  icpVulkanUtility.h  icpWindowSystem.cpp  icpWindowSystem.h
src/render/RHI/: icpCommandBuffer.h  icpDescirptorSet.h  icpDescriptorSet.cpp  icpGPUBuffer.h  icpGPUDevice.cpp  icpGPUDevice.h  icpGraphicsPipelineBuilder.cpp  icpGraphicsPipelineBuilder.h  icpRHI.h
src/render/RHI/Vulkan/: icpVkGPUDevice.cpp  icpVkGPUDevice.h  icpVulkanRHI.cpp  icpVulkanRHI.h  icpVulkanUtility.cpp  icpVulkanUtility.h
src/render/light/: icpLightComponent.cpp  icpLightComponent.h  icpLightSystem.cpp  icpLightSystem.h
src/render/material/: icpImageSampler.cpp  icpImageSampler.h  icpMaterial.cpp  icpMaterial.h  icpTextureRenderResourceManager.cpp  icpTextureRenderResourceManager.h
src/render/renderPass/: icpCSMPass.cpp  icpCSMPass.h  icpDeferredCompositePass.cpp  icpDeferredCompositePass.h  icpEditorUiPass.cpp  icpEditorUiPass.h  icpForwardTranslucentPass.cpp  icpForwardTranslucentPass.h  icpGBufferPass.cpp  icpGBufferPass.h  icpMainForwardPass.cpp  icpMainForwardPass.h  icpRenderPassBase.cpp  icpRenderPassBase.h  icpRenderToImgPass.cpp  icpRenderToImgPass.h  icpShadowPass.cpp  icpShadowPass.h  icpSpotLightShadowPass.cpp  icpSpotLightShadowPass.h  icpUiPass.cpp  icpUiPass.h  icpUnlitForwardPass.cpp  icpUnlitForwardPass.h
src/render/shadow/: icpShadowManager.cpp  icpShadowManager.h
src/resource/: icpGLTFLoaderUtil.cpp  icpGLTFLoaderUtil.h  icpGLTFSceneResoruce.h  icpResourceBase.cpp  icpResourceBase.h  icpResourceSystem.cpp  icpResourceSystem.h  icpSamplerResource.cpp  icpSamplerResource.h
src/scene/: icpComponent.cpp  icpComponent.h  icpEntity.cpp  icpEntity.h  icpEntityDataComponent.h  icpSceneSystem.cpp  icpSceneSystem.h  icpXFormComponent.cpp  icpXFormComponent.h
src/ui/: icpUiSystem.cpp  icpUiSystem.h
src/ui/editorUI/: icpEditorUI.cpp  icpEditorUI.h
test/: testflat
